# freertos_test0

./: CMakeLists.txt
include/: FreeRTOSConfig.h
src/: ApplicationEntry.c  ApplicationEntry.h  main.c  main.cpp
src/TaskA/: CMakeLists.txt
src/TaskA/include/: TaskA.h
src/TaskA/src/: TaskA.c
src/TaskB/: CMakeLists.txt
src/TaskB/include/: TaskB.h
src/TaskB/src/: TaskB.c
